...
        android:layout_height="65dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="22dp"
        android:text="Sign Up"
        app:layout_constraintBottom_toTopOf="@+id/signInButtonMainPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessageMainPage" />

    <Button
        android:id="@+id/signInButtonMainPage"
...
